...

/* No comment provided by engineer. */
"About Pocket Code" = "About Pocket Code";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Add" = "Add";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Background" = "Background";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Cancel" = "Cancel";

/* bluetooth */
...

/* No comment provided by engineer. */
"Continue" = "Continue";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Copy" = "Copy";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Debug mode" = "Debug mode";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete" = "Delete";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete Objects" = "Delete Objects";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Delete this object" = "Delete this object";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Edit" = "Edit";

/* Action sheet menu title */
...

/* Placeholder for add object-name input field */
"Enter your object name here..." = "Enter your object name here...";

/* Placeholder for project-description input field */
...

/* No comment provided by engineer. */
"Explore" = "Explore";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Help" = "Help";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Hide Details" = "Hide Details";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Login" = "Login";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"More" = "More";

/* No comment provided by engineer. */
...

/* Name of the default catrobat project (used as filename!!) */
"My first project" = "My first program";

/* Default title of imported photo from camera (taken by camera) */
...

/* No comment provided by engineer. */
"New" = "New";

/* paint */
...

/* No comment provided by engineer. */
"OK" = "OK";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Pocket Code" = "Pocket Code";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Rename" = "Rename";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Rename object" = "Rename object";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Scripts" = "Scripts";

/* bluetooth */
...

/* No comment provided by engineer. */
"Select All" = "Select All";

/* bluetooth */
...

/* No comment provided by engineer. */
"Set Arduino digital pin" = "Set Arduino digital pin";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Settings" = "Settings";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Show Details" = "Show Details";

/* No comment provided by engineer. */
...

/* Button title at the settings screen to get to the terms of use and services. */
"Terms of Use and Services" = "Terms of Use and Services";

/* paint */
...

/* No comment provided by engineer. */
"Upload" = "Upload";

/* No comment provided by engineer. */
...

/* No comment provided by engineer. */
"Use Arduino bricks" = "Use Arduino bricks";

/* No comment provided by engineer. */
...
