...
- (void)viewDidLoad
{
    [super viewDidLoad];

    //background image
    [self initTableView];
    [TableUtil initNavigationItem:self.navigationItem withTitle:@"Programs" enableBackButton:YES target:self];
    
        
    //loading levels
    NSString *documentsDirectoy = [Util applicationDocumentsDirectory];
    NSString *levelFolder = @"levels";
    NSString *levelsPath = [NSString stringWithFormat:@"%@/%@", documentsDirectoy, levelFolder];
...
