...
                        <connections>
                            <outlet property="dataSource" destination="oKj-cD-XDS" id="pwM-Xd-ipY"/>
                            <outlet property="delegate" destination="oKj-cD-XDS" id="W7e-U1-6OE"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Pocket Code" id="vGJ-82-iau">
                        <barButtonItem key="leftBarButtonItem" title="Item" id="yUY-xB-KT0">
                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Bnx-Gw-xQI">
                                <rect key="frame" x="16" y="0.0" width="64" height="44"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <state key="normal" image="appsettings"/>
                                <connections>
                                    <action selector="openSettings:" destination="oKj-cD-XDS" eventType="touchUpInside" id="7tt-2b-ZWO"/>
...
